# bitsandbobs

./: README.md  pyproject.toml
src/bitsandbobs/: __init__.py  hi5.py
src/bitsandbobs/plt/: __init__.py  colors.py  tweaks.py
