[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bitsandbobs"
version = "0.0.1"
authors = [
  { name="F. Paul Spitzner", email="paul.spitzner@ds.mpg.de" },
]
description = "Little helpers I use across projects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "python-benedict",
]
